# slirc-proto

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HOWTO.md  LICENSE  README.md  SLIRCd-NOTES.md
.github/: copilot-instructions.md
.github/agents/: SLIRC-proto.agent.md
.github/instructions/: rust.instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml
benches/: parsing.rs
docs/: HOWTO.md  SLIRCd-NOTES.md
examples/: bot.rs  compliance_check.rs  ctcp_handler.rs  isupport_parser.rs  repro_tags.rs  sasl_auth.rs  simple_client.rs  zero_copy_server.rs
fuzz/fuzz_targets/: message_parser.rs
src/: caps.rs  casemap.rs  chan.rs  colors.rs  ctcp.rs  encode.rs  error.rs  format.rs  irc.rs  isupport.rs  lib.rs  line.rs  sasl.rs  scanner.rs  state.rs  transport.rs  util.rs  validation.rs  websocket.rs
src/caps/: mod.rs
src/command/: mod.rs  ref_enum.rs  serialize.rs  types.rs  util.rs
src/command/parse/: channel.rs  connection.rs  ircv3.rs  mod.rs  (+3 more)
src/compliance/: mod.rs
src/crdt/: gset.rs  mod.rs  orset.rs
src/encode/: command.rs  mod.rs
src/ircv3/: batch.rs  mod.rs  msgid.rs  server_time.rs
src/isupport/: mod.rs  tokens.rs
src/message/: borrowed.rs  mod.rs  nom_parser.rs  parse.rs  serialize.rs  tags.rs  types.rs
src/mode/: mod.rs  parse.rs  types.rs
src/prefix/: mod.rs  serialize.rs  types.rs
src/response/: constructors.rs  errors.rs  helpers.rs  mod.rs  numerics.rs
src/sasl/: mod.rs  scram.rs
src/state/: mod.rs  sync.rs
src/transport/: error.rs  framed.rs  mod.rs  parts.rs  zero_copy.rs
tests/: compliance_check.rs  control_chars.rs  convenience_constructors.rs  error_handling.rs  isupport_builder.rs  message_round_trip.rs  proptest_roundtrip.rs  rfc_ircv3_compliance.rs  s2s_protocol.rs  tags_compliance.rs  transport_integration.rs
(+8 files in other folders)
