[package]
name = "slirc-proto"
version = "1.0.0"
authors = ["Straylight Team <StrayLight@sid3.xyz>"]
edition = "2021"
rust-version = "1.70"
description = "A robust IRC protocol library for parsing and encoding IRC messages with full IRCv3 support."
documentation = "https://docs.rs/slirc-proto/"
repository = "https://github.com/sid3xyz/slirc-proto"
license = "Unlicense"
keywords = ["irc", "protocol", "tokio", "ircv3", "parser"]
categories = ["network-programming", "parser-implementations"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
exclude = ["fuzz"]

[features]
default = ["tokio"]
tokio = ["bytes", "dep:tokio", "tokio-util", "futures-util", "anyhow", "socket2", "tokio-rustls", "tokio-tungstenite", "tracing"]
proptest = ["dep:proptest"]

[dependencies]
encoding = { package = "encoding_rs", version = "0.8", optional = true }
thiserror = "1.0.40"
chrono = "0.4"

bytes = { version = "1.4.0", optional = true }
tokio = { version = "1.27.0", features = ["net", "io-util", "macros", "rt-multi-thread", "time"], optional = true }
tokio-util = { version = "0.7.7", features = ["codec"], optional = true }
futures-util = { version = "0.3", optional = true }
nom = "7"

anyhow = { version = "1.0", optional = true }
socket2 = { version = "0.5", optional = true }
tokio-rustls = { version = "0.26", optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
tracing = { version = "0.1", optional = true }
base64 = "0.22.1"
proptest = { version = "1.4", optional = true }

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parsing"
harness = false
